--- a/contact.html
+++ b/contact.html
@@ -198,14 +198,19 @@
           </div>
       </div>
     </section>
-
+<div class="floating-whatsapp">
+  <a href="https://wa.me/9591412148" target="_blank"><img src="images//WhatsApp.svg.webp" alt=""></a>
+</div>
+<div class="floating-support">
+  <a href="book-an-appointment.html"><img src="images//customer-care.svg" alt=""></a>
+</div>
 
 
   <footer>
     <div class="container">
       <div class="footer-wrap">
         <div class="footer-logo-wrap">
-          <img src="images/logo.png" alt="">
+          <img src="images/footer_logo.png" alt="">
         </div>
         <div class="footer-links">
           <ul>
