--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="swiper home-showcaseSlider">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-              <div class="swiper-image" data-swiper-parallax-x="3%" style="background-image:url(images/bannerbg.png)">
+              <div class="swiper-image" data-swiper-parallax-x="3%" style="background-image:url(images/banner1.png)">
                   <div class="container">
                       <h1 class="bigTitle">Expert Pest
                         Control Services
@@ -72,9 +72,9 @@
               </div>
           </div>
           <div class="swiper-slide">
-              <div class="swiper-image" data-swiper-parallax-x="3%" style="background-image:url(images/bannerbg.png)">
+              <div class="swiper-image" data-swiper-parallax-x="3%" style="background-image:url(images/banner2.png)">
                   <div class="container">
-                    <h1 class="bigTitle">Expert Pest
+                    <h1 class="bigTitle ">Expert Pest
                       Control Services
                       for Every Need</h1>        
                       <img src="images/banner-mob.png" class="img-fluid" alt="">              
@@ -82,9 +82,20 @@
               </div>
           </div>
           <div class="swiper-slide">
-              <div class="swiper-image" data-swiper-parallax-x="3%" style="background-image:url(images/bannerbg.png)">
+              <div class="swiper-image" data-swiper-parallax-x="3%" style="background-image:url(images/banner3.png)">
                     <div class="container">
-                      <h1 class="bigTitle">Expert Pest
+                      <h1 class="bigTitle color-white">Expert Pest
+                        Control Services
+                        for Every Need</h1>   
+                        <img src="images/banner-mob.png" class="img-fluid" alt="">                     
+                    </div>
+                </div>
+          </div>
+
+          <div class="swiper-slide">
+              <div class="swiper-image" data-swiper-parallax-x="3%" style="background-image:url(images/banner4.png)">
+                    <div class="container">
+                      <h1 class="bigTitle color-white">Expert Pest
                         Control Services
                         for Every Need</h1>   
                         <img src="images/banner-mob.png" class="img-fluid" alt="">                     
@@ -281,7 +292,7 @@
   <div class="container">
     <div class="footer-wrap">
       <div class="footer-logo-wrap">
-        <img src="images/logo.png" alt="">
+        <img src="images/footer_logo.png" alt="">
       </div>
       <div class="footer-links">
         <ul>
@@ -321,6 +332,18 @@
     </div>
   </div>
 </footer>
+
+<div class="floating-whatsapp">
+  <a href="https://wa.me/9591412148" target="_blank"><img src="images//WhatsApp.svg.webp" alt=""></a>
+</div>
+<div class="floating-support">
+  <a href="book-an-appointment.html"><img src="images//customer-care.svg" alt=""></a>
+</div>
+
+<div class="floating-btn-wrap">
+  <a href="book-an-appointment.html">Book an appointment</a>
+  <a href="https://wa.me/9591412148">Whatsapp</a>
+</div>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <!-- Swiper JS -->
