--- a/services.html
+++ b/services.html
@@ -77,6 +77,7 @@
             <div class="services-image"><img src="images/Pest-Control.png" alt=""></div>
             <div class="service-content">
               <h5>General Pest Control</h5>
+              <h6>Comprehensive protection</h6>
               <ul>  
                 <li>Comprehensive protection from common household pests such as cockroaches, ants, flies,
                   spiders, and silverfish.</li>
@@ -84,8 +85,9 @@
                     of pests, evaluate the level of infestation, and pinpoint active areas.</li>
                 <li>A customized treatment plan tailored to your specific pest control needs based on the inspection
                   findings.</li>
-                <li>Targeted spray treatment in areas prone to cockroach activity, such as kitchens, bathrooms, and
-                  hidden corners.</li>
+              </ul>
+              <h6 class="mt-4">Lorem ipsum</h6>
+              <ul>  
                 <li>Additional spray application in kitchen cabinets, around hinges, and wooden fixtures to ensure
                   thorough protection.</li>
                 <li>Excludes treatment for rats, lizards, and certain other pests.</li>
